more work on responsiveness

--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
 
       <div class="row">
         <div class="col-xs-4 col-sm-4 col-md-4">
+          <p class="part-label">Topic Sentence</p>
           <textarea id="ts1" class="part" placeholder="Say what your paragraph will be about."></textarea>
+          <p class="part-label">Examples</p>
           <textarea id="ex1" class="part" placeholder="Give examples about why your topic sentence is true."></textarea>
+          <p class="part-label">Concluding Sentence</p>
           <textarea id="cs1" class="part" placeholder="Conclude your paragraph and repeat the topic sentence."></textarea>
         </div>
         <div class="col-xs-4 col-sm-4 col-md-4">
@@ -49,5 +52,6 @@
     <script src="lib/bs/bootstrap.min.js"></script>
     <script src="lib/marked.min.js"></script>
     <script src="lib/sentimood.min.js"></script>
+    <script src="src/script.js"></script>
   </body>
 </html>
