Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
 
         <ul>
-          <li><a href="http://getessaymaker.com/online">Open <strong>EssayMaker</strong></a></li>
           <li><a href="https://github.com/soops/EssayMaker/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/soops/EssayMaker/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/soops/EssayMaker">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
@@ -40,7 +40,15 @@
 
 <p>EssayMaker is designed with a no eyesore, no clutter philosophy. Nothing is there when you don't need it. Everything is there when you do. While simple, EssayMaker doesn't sacrifice functionality or beauty. EssayMaker is an environment you can focus in and get stuff done in.</p>
 
-<p><strong><em>This website is a work in progress.</em></strong></p>
+<h2>
+<a id="free-and-easy-to-use" class="anchor" href="#free-and-easy-to-use" aria-hidden="true"><span class="octicon octicon-link"></span></a>Free and easy-to-use</h2>
+
+<p>EssayMaker is absolutely free with no paywalls or licenses, no distracting ads, and no popups, because unlike <a href="http://company.king.com/">some people</a> I actually care about the experience of my users. If you're feeling nice, you can donate to my <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=TUFL9KWZGXZE2">PayPal</a>.</p>
+
+<h2>
+<a id="open-source" class="anchor" href="#open-source" aria-hidden="true"><span class="octicon octicon-link"></span></a>Open-source</h2>
+
+<p>Visit EssayMaker on GitHub to request features and report bugs, or even submit a pull request and add your own features.</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/soops">soops</a></p>
