update to newest release

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <ul>
           <li><a href="https://github.com/soops/EssayMaker/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/soops/EssayMaker/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/soops/EssayMaker">View On <strong>GitHub</strong></a></li>
+          <li><a href="http://getessaymaker.com/online">Open <strong>EssayMaker</strong></a></li>
         </ul>
       </header>
       <section>
