First shell->gulp conversion wave

--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
     <!-- bower:js -->
     <script src="lib/jquery/dist/jquery.js"></script>
     <script src="lib/FileSaver.js/FileSaver.js"></script>
+    <script src="lib/blob/blob.js"></script>
     <script src="lib/bootstrap-toggle/js/bootstrap-toggle.min.js"></script>
     <script src="lib/filereader.js/filereader.js"></script>
     <script src="lib/marked/lib/marked.js"></script>
