--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <p id="date-text"></p>
           </div>
 
-          <p class="part-label collapse lth">Thesis Paragraph</p>
+          <p class="part-label collapse lth">Thesis Statement</p>
           <textarea class="para" id="th" onfocus="titleShow('th', '')" onblur="titleHide('lth')" placeholder="The introductory/thesis paragraph accomplishes three purposes: it captures the reader’s interest, it suggests the importance of the essay’s topic, and it ends with a thesis sentence. Often, the thesis sentence states a claim that consists of two or more related points. If the thesis contains multiple points or assertions, each body paragraph should support or justify them, preferably in the order the assertions originally stated in the thesis."></textarea>
 
           <div class="row">
